# lez-hello-world

./: .gitignore  Cargo.toml  README.md  flake.nix
app/: CMakeLists.txt  main.cpp  main.qml
hello_core/: Cargo.toml
hello_core/src/: lib.rs
hello_ffi/: Cargo.toml
hello_ffi/include/: hello_program.h
hello_ffi/src/: ffi.rs
hello_program/: Cargo.toml
hello_program/src/: lib.rs
methods/guest/: Cargo.toml
module/: CMakeLists.txt  hello_world_module.json
module/include/: hello_program.h
module/qml/: HelloWorldView.qml  qmldir
module/src/: HelloWorldBridge.cpp  HelloWorldBridge.h  hello_world_plugin.cpp
nix/: app.nix  ffi.nix
