[workspace]
resolver = "2"
members = [
    "hello_core",
    "hello_program",
    "hello_ffi",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nssa_core = { git = "https://github.com/logos-blockchain/lssa", package = "nssa_core" }
nssa = { git = "https://github.com/logos-blockchain/lssa", package = "nssa" }
