[workspace]
resolver = "2"
members = [
    "hello_core",
    "hello_program",
    "hello_ffi",
]

[workspace.dependencies]
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
risc0-build = "=3.0.5"
borsh = "1.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nssa_core = { git = "https://github.com/logos-blockchain/lssa", package = "nssa_core" }
nssa = { git = "https://github.com/logos-blockchain/lssa", package = "nssa" }
