[package]
name = "hello-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "hello_program"
path = "src/bin/hello_program.rs"

[dependencies]
hello_core = { path = "../../hello_core" }
hello_program = { path = "../../hello_program" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa", package = "nssa_core" }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
